# wearables

./: CMakeLists.txt
WearDataToXSensFrameWrapper/: CMakeLists.txt
XSensBackcompatibilityWrapper/: CMakeLists.txt
XSensBackcompatibilityWrapper/include/: WearDataToXSensFrameWrapper.h
XSensBackcompatibilityWrapper/msgs/: CMakeLists.txt
XSensBackcompatibilityWrapper/src/: WearDataToXSensFrameWrapper.cpp
app/xml/: FTShoeLeftWearableDevice_tempPRO01.xml  FTShoeRightWearableDevice_tempPRO01.xml
devices/: CMakeLists.txt
devices/IAnalogSensorToIWear/src/: IAnalogSensorToIWear.cpp
devices/IWearRemapper/src/: IWearRemapper.cpp
devices/WearDataToXsensFrame/: CMakeLists.txt
devices/WearDataToXsensFrame/conf/: WearDataToXsensFrameDevice .xml  WearDataToXsensFrameDevice.ini
devices/WearDataToXsensFrame/include/: WearDataToXsensFrameDevice.h
devices/WearDataToXsensFrame/msgs/: CMakeLists.txt
devices/WearDataToXsensFrame/src/: WearDataToXsensFrameDevice.cpp
wrappers/IWear/src/: IWearWrapper.cpp
